// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Layout /> renders properly 1`] = `
<div>
  <main
    class="jsx-1819645925 layout"
  >
    <header
      class="jsx-2405765474"
      data-testid="header_section"
    >
      <nav
        class="jsx-2405765474 wrapper"
      >
        <a
          class="jsx-2405765474"
          data-testid="header_homepageLogoLink"
          href="/pt/homepage"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27250%27%20height=%2735%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="Logo"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </a>
        <ul
          class="jsx-2853090894 "
        >
          <li
            class="jsx-2853090894"
          >
            <a
              class="jsx-2853090894 fontS"
              href="/pt/about"
            >
              Sobre
            </a>
          </li>
          <li
            class="jsx-2853090894"
          >
            <a
              class="jsx-2853090894 fontS"
              href="/pt/projects"
            >
              Projetos
            </a>
          </li>
          <li
            class="jsx-2853090894"
          >
            <a
              class="jsx-2853090894 fontS"
              href="/pt/services"
            >
              Serviços
            </a>
          </li>
          <li
            class="jsx-2853090894"
          >
            <a
              class="jsx-2853090894 fontS"
              href="/pt/contact"
            >
              Contacto
            </a>
          </li>
          <li
            class="jsx-2853090894 languageButton fontXXS"
          >
            <button
              class="jsx-2866958827"
              type="button"
            >
              pt
            </button>
          </li>
        </ul>
        <i
          aria-label="toggle menu"
          class="jsx-2079322113 menuIcon hidden"
          data-testid="menuIcon_button"
          role="button"
          tabindex="0"
        >
          <span
            class="jsx-2079322113"
          />
        </i>
      </nav>
    </header>
    <div>
      <p>
        Child
      </p>
    </div>
    <footer
      class="jsx-3092902157"
      data-testid="footer_section"
    >
      <div
        class="jsx-3092902157 wrapper"
      >
        <p
          class="jsx-3092902157 fontXS"
        >
          Aguarela Digital - Developed by
           
          <a
            class="jsx-3092902157 animatedLink animatedLinkWhite"
            href="https://www.andremarquesdev.com"
            rel="noreferrer"
            target="_blank"
          >
            André Marques
          </a>
        </p>
        <ul
          class="jsx-3092902157"
        >
          <li
            class="jsx-3092902157"
          >
            <a
              aria-label="Aguarela instagram"
              class="jsx-3092902157"
              href="https://www.instagram.com/aguareladigital/"
              rel="noreferrer"
              target="_blank"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
                />
              </svg>
            </a>
          </li>
          <li
            class="jsx-3092902157"
          >
            <a
              aria-label="Aguarela facebook"
              class="jsx-3092902157"
              href="https://www.facebook.com/aguareladigitalpt"
              rel="noreferrer"
              target="_blank"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 320 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
                />
              </svg>
            </a>
          </li>
          <li
            class="jsx-3092902157"
          >
            <a
              aria-label="Go to contact page"
              class="jsx-3092902157"
              href="/pt/contact"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
                />
              </svg>
            </a>
          </li>
        </ul>
      </div>
    </footer>
  </main>
</div>
`;

exports[`<Layout /> renders properly in English 1`] = `
<div>
  <main
    class="jsx-1819645925 layout"
  >
    <header
      class="jsx-2405765474"
      data-testid="header_section"
    >
      <nav
        class="jsx-2405765474 wrapper"
      >
        <a
          class="jsx-2405765474"
          data-testid="header_homepageLogoLink"
          href="/en/homepage"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27150%27%20height=%2735%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="Logo"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </a>
        <ul
          class="jsx-2853090894 mobileLayout"
        >
          <li
            class="jsx-2853090894"
          >
            <a
              class="jsx-2853090894 fontS"
              href="/en/about"
            >
              About
            </a>
          </li>
          <li
            class="jsx-2853090894"
          >
            <a
              class="jsx-2853090894 fontS"
              href="/en/projects"
            >
              Projects
            </a>
          </li>
          <li
            class="jsx-2853090894"
          >
            <a
              class="jsx-2853090894 fontS"
              href="/en/services"
            >
              Services
            </a>
          </li>
          <li
            class="jsx-2853090894"
          >
            <a
              class="jsx-2853090894 fontS"
              href="/en/contact"
            >
              Contact
            </a>
          </li>
          <li
            class="jsx-2853090894 languageButton fontXXS white fontXS"
          >
            <button
              class="jsx-2866958827"
              type="button"
            >
              pt
            </button>
          </li>
        </ul>
        <i
          aria-label="toggle menu"
          class="jsx-2079322113 menuIcon"
          data-testid="menuIcon_button"
          role="button"
          tabindex="0"
        >
          <span
            class="jsx-2079322113"
          />
        </i>
      </nav>
    </header>
    <div>
      <p>
        Child
      </p>
    </div>
    <footer
      class="jsx-3092902157"
      data-testid="footer_section"
    >
      <div
        class="jsx-3092902157 wrapper"
      >
        <p
          class="jsx-3092902157 fontXS"
        >
          Aguarela Digital - Developed by
           
          <a
            class="jsx-3092902157 animatedLink animatedLinkWhite"
            href="https://www.andremarquesdev.com"
            rel="noreferrer"
            target="_blank"
          >
            André Marques
          </a>
        </p>
        <ul
          class="jsx-3092902157"
        >
          <li
            class="jsx-3092902157"
          >
            <a
              aria-label="Aguarela instagram"
              class="jsx-3092902157"
              href="https://www.instagram.com/aguareladigital/"
              rel="noreferrer"
              target="_blank"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
                />
              </svg>
            </a>
          </li>
          <li
            class="jsx-3092902157"
          >
            <a
              aria-label="Aguarela facebook"
              class="jsx-3092902157"
              href="https://www.facebook.com/aguareladigitalpt"
              rel="noreferrer"
              target="_blank"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 320 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
                />
              </svg>
            </a>
          </li>
          <li
            class="jsx-3092902157"
          >
            <a
              aria-label="Go to contact page"
              class="jsx-3092902157"
              href="/en/contact"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
                />
              </svg>
            </a>
          </li>
        </ul>
      </div>
    </footer>
  </main>
</div>
`;

exports[`<Layout /> renders properly when the menu is open and the resolution is lower than desktop 1`] = `
<div>
  <main
    class="jsx-1819645925 layout menuOpen"
  >
    <header
      class="jsx-2405765474"
      data-testid="header_section"
    >
      <nav
        class="jsx-2405765474 wrapper"
      >
        <a
          class="jsx-2405765474"
          data-testid="header_homepageLogoLink"
          href="/pt/homepage"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27150%27%20height=%2735%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="Logo"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </a>
        <ul
          class="jsx-2853090894 mobileLayout menuOpen"
        >
          <li
            class="jsx-2853090894"
          >
            <a
              class="jsx-2853090894 fontS"
              href="/pt/about"
            >
              Sobre
            </a>
          </li>
          <li
            class="jsx-2853090894"
          >
            <a
              class="jsx-2853090894 fontS"
              href="/pt/projects"
            >
              Projetos
            </a>
          </li>
          <li
            class="jsx-2853090894"
          >
            <a
              class="jsx-2853090894 fontS"
              href="/pt/services"
            >
              Serviços
            </a>
          </li>
          <li
            class="jsx-2853090894"
          >
            <a
              class="jsx-2853090894 fontS"
              href="/pt/contact"
            >
              Contacto
            </a>
          </li>
          <li
            class="jsx-2853090894 languageButton fontXXS white fontXS"
          >
            <button
              class="jsx-2866958827"
              type="button"
            >
              pt
            </button>
          </li>
        </ul>
        <i
          aria-label="toggle menu"
          class="jsx-2079322113 menuIcon open"
          data-testid="menuIcon_button"
          role="button"
          tabindex="0"
        >
          <span
            class="jsx-2079322113"
          />
        </i>
      </nav>
    </header>
    <div>
      <p>
        Child
      </p>
    </div>
    <footer
      class="jsx-3092902157"
      data-testid="footer_section"
    >
      <div
        class="jsx-3092902157 wrapper"
      >
        <p
          class="jsx-3092902157 fontXS"
        >
          Aguarela Digital - Developed by
           
          <a
            class="jsx-3092902157 animatedLink animatedLinkWhite"
            href="https://www.andremarquesdev.com"
            rel="noreferrer"
            target="_blank"
          >
            André Marques
          </a>
        </p>
        <ul
          class="jsx-3092902157"
        >
          <li
            class="jsx-3092902157"
          >
            <a
              aria-label="Aguarela instagram"
              class="jsx-3092902157"
              href="https://www.instagram.com/aguareladigital/"
              rel="noreferrer"
              target="_blank"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
                />
              </svg>
            </a>
          </li>
          <li
            class="jsx-3092902157"
          >
            <a
              aria-label="Aguarela facebook"
              class="jsx-3092902157"
              href="https://www.facebook.com/aguareladigitalpt"
              rel="noreferrer"
              target="_blank"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 320 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
                />
              </svg>
            </a>
          </li>
          <li
            class="jsx-3092902157"
          >
            <a
              aria-label="Go to contact page"
              class="jsx-3092902157"
              href="/pt/contact"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
                />
              </svg>
            </a>
          </li>
        </ul>
      </div>
    </footer>
  </main>
</div>
`;
